--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,36 @@
 *{
     margin: 0;
     padding: 0;
+    list-style: none;
+    text-decoration: none;
 }
+:root{
+    --font-primary: "Baloo Da 2", sans-serif;
+    --font-secundary:"Josefin Slab", sans-serif;
+    --font-action:"Muli", sans-serif;
+}
+
+.hamburguer{
+    /*background-color: red;*/
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    z-index: 100;
+    right: 2rem;
+    top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+}
+.line{
+    width: 100%;
+    height: .1rem;
+    background-color: #fff;
+    box-shadow: 0.1rem 0.1rem 1px #000;
+
+}
+
 /*header*/
 header{
     width: 100%;
@@ -56,7 +85,7 @@ header{
 .banner h1{
     color: #fff;
     font-size: 3rem;
-    font-family: "baloo 2";serif;
+    font-family:var(--font-primary);
     font-weight: 200;
     text-shadow: 0.3rem 0.4rem 2px rgba(0, 0, 0, .4);
     line-height: 2rem;
@@ -66,7 +95,7 @@ header{
 }
 
 .banner p{
-    font-family: "josefin Slab",serif;
+    font-family: var(--font-secundary);
     color: #fff;
     font-size: 2rem;
     text-shadow: 0.2rem 0.2rem  rgba(0, 0, 0, .4);
@@ -75,7 +104,7 @@ header{
     animation: moveBanner 1s 0.7s forwards;
 }
 .banner button{
-    font-family: "Muli",serif;
+    font-family: var(--font-action);
     color: #fff;
     letter-spacing: .1rem;
     text-transform: uppercase;
@@ -93,4 +122,30 @@ header{
     opacity: 0.8;
     cursor: pointer;
 }
-
+.sidebar{
+    width: 20rem;
+    height: 100vh;
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    right: 0;
+}
+.menu{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.menu-item{
+    text-align: center;
+    margin-bottom: .5rem;
+}
+.menu-link{
+    font-family: var(--font-action);
+    font-size: 2rem;
+    color: #555;
+    transition: color 1s;
+}
+.menu-link:hover{
+    color: #240b36;
+}
