--- a/css/main.css
+++ b/css/main.css
@@ -28,12 +28,51 @@
     justify-content: space-evenly;
     cursor: pointer;
 }
+.show-menu .hamburguer{
+    right: 16rem;
+}
 .line{
     width: 100%;
     height: .1rem;
     background-color: #fff;
     box-shadow: 0.1rem 0.1rem 1px #000;
+    transition: transform 1s;
+}
+.show-menu #line1{
+    transform: rotate(50deg) translate(.1rem, .5rem);
+}
 
+.show-menu #line2{
+    opacity: 0;
+    visibility: hidden;
+}
+.show-menu #line3{
+    transform: rotate(-50deg)translate(.11rem, -.6rem);
+}
+.hamburguer span{
+    position: absolute;
+    left: 3rem;
+    height: 2rem ;
+    width: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rebeccapurple;
+    font-family: var(--font-action);
+    color: #fff;
+    opacity: 0;
+}
+.hamburguer span::before{
+    content: "";
+    position: absolute;
+    border-right: .5rem solid rebeccapurple;
+    border-top: .5rem solid transparent;
+    border-left: .5rem solid transparent;
+    border-bottom: .5rem solid transparent;
+    left: -1rem;
+}
+.show-menu .hamburguer:hover span{
+    opacity: 1;
 }
 
 /*header*/
@@ -128,6 +167,10 @@ header{
     background-color: #fff;
     position: fixed;
     top: 0;
+    right: -20rem;
+    transition: all 1s;
+}
+.show-menu .sidebar{
     right: 0;
 }
 .menu{
@@ -147,5 +190,27 @@ header{
     transition: color 1s;
 }
 .menu-link:hover{
+    color: red;
+}
+
+.social-media{
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+.social-media i{
+    color: #555;
+    height: 2.5rem;
+    width: 2.3rem;
+    font-size: 2.4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
     color: #240b36;
+}
+.social-media i:hover{
+    color: rebeccapurple;
 }
