--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@
     --font-secundary:"Josefin Slab", sans-serif;
     --font-action:"Muli", sans-serif;
 }
-
+/*menu humburguer*/
 .hamburguer{
     /*background-color: red;*/
     width: 2rem;
@@ -74,8 +74,12 @@
 .show-menu .hamburguer:hover span{
     opacity: 1;
 }
+/*fim menu humburguer*/
 
-/*header*/
+
+
+
+/* inicio header*/
 header{
     width: 100%;
     height: 100vh;
@@ -96,6 +100,10 @@ header{
     opacity: 0.5;
     animation: zoom 25s;
 }
+/* fim header*/
+
+
+
 /*keyframe zoom banner*/
 @keyframes zoom{
     0%{
@@ -105,12 +113,20 @@ header{
         transform: scale(1);
     }
 }
+/*fim keyframe zoom banner*/
+
+
+
 /*banner*/
 .banner{
     position: absolute;
     top: 30%;
     left: 15%;
 }
+/*fim banner*/
+
+
+
 /*keyframe move banner*/
 @keyframes moveBanner{
     0%{
@@ -132,7 +148,6 @@ header{
     opacity: 0;
     animation: moveBanner 1s 0.5s forwards;
 }
-
 .banner p{
     font-family: var(--font-secundary);
     color: #fff;
@@ -192,7 +207,6 @@ header{
 .menu-link:hover{
     color: red;
 }
-
 .social-media{
     position: absolute;
     bottom: 2rem;
@@ -213,4 +227,313 @@ header{
 }
 .social-media i:hover{
     color: rebeccapurple;
+}
+/*fim keyframe move banner*/
+
+
+
+
+/*sessão conehcimentos*/
+.conhecimentos{
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(6, 6rem);
+    row-gap: .5rem;
+ }
+.conhecimento:nth-child(1){
+    grid-column: 4 / 7;
+    grid-row: 1 / 3;
+}
+.conhecimento:nth-child(2){
+    grid-column: 3 / 6;
+    grid-row: 3 / 5;
+} 
+.conhecimento:nth-child(3){
+    grid-column: 4 / 7;
+    grid-row: 5 / -1;
+}
+.conhecimento:nth-child(4){
+    grid-column: 11 / 14;
+    grid-row: 1 / 3;
+}
+.conhecimento:nth-child(5){
+    grid-column: 12 / 15;
+    grid-row: 3 / 5;
+}
+.conhecimento:nth-child(6){
+    grid-column: 11 / 14;
+    grid-row: 5 / -1;
+}
+.sessao-conhecimentos{
+    background-color: whitesmoke;
+}
+.sessao-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.sessao-header h1{
+    font-family: var(--font-primary);
+    font-size: 3rem;
+    color: rebeccapurple;
+    border-bottom: solid 3px rebeccapurple;
+    margin-bottom: 1.5rem;
+}
+.conhecimento-header{
+    display: flex;
+    align-items: center;
+    color: red;
+}
+.conhecimento-header i{
+    font-size: 2.5rem;
+    align-items: center;
+    color: rebeccapurple;
+}
+.conhecimento-header h3{
+    font-family: var(--font-secundary);
+    font-size: 2rem;
+    padding-left: 1rem;
+}
+.conhecimento-text{
+    font-family: var(--font-secundary);
+    margin-top: 1rem;
+    margin-left: 1rem;
+}
+.conhecimento-img-wrapper{
+    grid-column: 7 / 11;
+    grid-row: 2 / 6;
+    width: 100%;
+}
+.conhecimento-img-wrapper img{
+    object-fit: cover;
+    width: 100%;
+}
+/*fim sessão conhecimentos*/
+
+/* inicio sessao projetos*/
+.projetos{
+    display: flex;
+    justify-content: space-evenly;
+}
+.card{
+    width: 18rem;
+    height: 25rem;
+    position: relative;
+}
+.card-img-wrapper{
+    width: 100%;
+    height: 100%;
+    border-radius: 1rem;
+    background-color: #555;
+}
+
+.card-img-wrapper img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 1rem;
+    opacity: .8;
+    transition: opacity .4s;
+}
+.card:hover .card-img-wrapper img{
+    opacity: .5;
+}
+.card-info{
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    bottom: 0;
+    padding: 2rem;
+    text-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, .4);
+    transition: all .4s;
+}
+.card-info h2{
+    font-family: var(--font-primary);
+    font-size: 2rem;
+    font-weight: 500;
+    color: whitesmoke;
+}
+.card-info h3{
+    font-family: var(--font-secundary);
+    font-weight: 1500;
+    color: red;
+    margin-bottom: 1.5rem;
+}
+.card-info p{
+    font-family: var(--font-secundary);
+    color: aliceblue;
+    font-weight: 500;
+    width: 80%;
+    margin-bottom: 2rem;
+}
+.btn{
+    background: #6a3093;
+    background: -webkit-linear-gradient(to top, #240b36, #c31432);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #240b36, #c31432); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    font-family: var(--font-action);
+    font-size: 1rem;
+    color: white;
+    border-radius: .5rem;
+    box-shadow: 0 .1rem .8rem rgba(0, 0, 0, .4);
+
+}
+.card-info button{
+    width: 8rem;
+    height: 2.5rem;
+   
+}
+.card:hover .card-info{
+    bottom: 2rem;
+    opacity: 1;
+    visibility: visible;
+}
+/* fim sessao projetos*/
+
+
+/*inicio contato*/
+
+.sessao-contato{
+    width: 100%;
+    height: 100vh;
+    background-color: darkgray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.contato-wrapper{
+    width: 60%;
+    height: 30rem;
+    display: flex;
+    box-shadow: 0 2rem 3rem rgba(0, 0, 0, 1.5);
+}
+.contato-left{
+    width: 35%;
+    background: linear-gradient(rgba(15,15,15, 0.5),rgba(22,22,22, 0.5)),
+     url(../imagens/contato.jpg);
+    background-size: cover;
+}
+.contato-right{
+    width: 65%;
+    background-color: white;
+    padding: 1rem 3rem 3rem 5rem;
+}
+.sessao-contato h1{
+    width: 100%;
+    text-align: center;
+    font-family: var(--font-primary);
+    color: #272727;
+    font-size: 3rem;
+    font-weight: lighter;
+}
+.sessao-contato form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.input-group{
+    position: relative;
+}
+.field{
+    background: transparent;
+    border: none;
+    width: 20rem;
+    font-size: 1.5rem;
+    font-family: var(--font-secundary);
+    border-bottom: 1px dashed gray;
+    height: 3rem;
+    outline: none;
+    margin: 1rem 0 ;
+}
+.input-group textarea{
+    padding-top: 1rem;
+    min-width: 5rem;
+    max-width: 25rem;
+    min-height: 2rem;
+    max-height: 5rem;
+}
+.field-label{
+position: absolute;
+left: 0;
+top: 2rem;
+font-size: 1.2rem;
+font-family: var(--font-secundary);
+text-transform: uppercase;
+transition: all 0.3s;
+}
+.field:focus ~ label{
+    top: 0;
+    font-size: 1rem;
+}
+.field:focus{
+border-bottom: 1px solid rebeccapurple;
+}
+.btn-submit{
+    width: 30rem;
+    height: 2rem;
+    text-transform: uppercase;
+    margin-top: 1rem;
+}
+/*fim contato*/
+
+/*inicio orçamento*/
+.sessao-orcamento{
+    width: 100%;
+    height: 100vh;
+    background: gray url(/imagens/desenvolvedor.png) no-repeat center center;
+    object-fit: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.orcamento-wrapper{
+    width: 60%;
+    height: 80%;
+    background-color: #ffffff99;
+    border-radius: 10px;
+    box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
+    position: relative;
+    justify-content: right;
+}
+.sessao-orcamento h1{
+    position: absolute;
+    top: -2.5rem;
+    left: 2rem;
+    background: #6a3093;
+    background: -webkit-linear-gradient(to top, #240b36, #c31432);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #240b36, #c31432); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    padding: 0 3rem;
+    color: white;
+    font-family: var(--font-primary);
+    font-size: 3rem;
+    font-weight: lighter;
+    box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+}
+.sessao-orcamento form{
+    margin: 4rem;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    column-gap: 2rem;
+    row-gap: 2rem;
+}
+.sessao-orcamento label{
+    font-family: var(--font-secundary);
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+.sessao-orcamento input[type="number"]{
+    font-family: var(--font-secundary);
+    width: 4rem;
+    font-size: 2rem;
+    outline: none;
+    border-radius: 10px;
+    border: none;
+    padding: 0.3rem;
+}
+.btn-orcamento{
+    text-transform: uppercase;
+    padding: 1rem;
+    cursor: pointer;
+    grid-column: 2;
 }
